# cio-wsi-segmentation

./: .gitattributes  Dockerfile  LICENSE  README.md  pyproject.toml  start.sh
cio_wsi_segmentation/: binary_segmentation.py  cell_segmentation.py  cli.py  inspect_image.py
